--- a/item/SalesChange/SalesChangeLinksNew.html
+++ b/item/SalesChange/SalesChangeLinksNew.html
@@ -2,25 +2,33 @@
 .widebtn {
     width: 125px;
 }
+li:hover {
+    //background-color: #e6f8fc;
+    border-radius: 5px;
+    border: 1px dotted #e6f8fc;
+}
 </style>
 
+<br>
 <div class="container-fluid"  align="center" style="height:80px;width:1200px;">
 <form method="get"> 
-    <div class="navbar navbar-default hidden-print" style="background-color:white;border:none">
+    <div class="navbar navbar-default hidden-print" style="background-color:white;border:none;padding:1px">
         <ul class="nav navbar-nav">
-            <li class="dropdown"><a style="width:100px;" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=1">Good</a></li>
-            <li class="dropdown"><a style="width:100px;" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=2">Notations</a></li>
-            <li class="dropdown"><a style="width:100px;" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=8">Missing</a></li>
-            <li class="dropdown"><a style="width:100px;" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=0">Unchecked</a></li>
-            <li class="dropdown"><a style="width:100px;" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=99">Additions</a></li>
-            <li class="dropdown"><a style="width:100px;" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=98">Do Not Carry</a></li>
-            <li class="dropdown"><a style="width:100px;" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=7">Shelf Tags</a></li>
-            <li class="dropdown"><a style="width:100px;" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=9">Generic Signs</a></li>
-            <li class="dropdown"><a style="width:100px;" href="">Do Nothing</a></li>
-            <li class="dropdown"><a style="width:150px;" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeIndex.php">Batch Check Utils.</a></li>
+            <li class="dropdown"><a style="width:100px;color:#68376b" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=1">Good</a></li>            
+            <li class="dropdown"><a style="width:100px;color:#68376b" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=2">Notations</a></li>
+            <li class="dropdown"><a style="width:100px;color:#68376b" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=8">Missing</a></li>
+            <li class="dropdown"><a style="width:100px;color:#68376b" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=0">Unchecked</a></li>
+            <li class="dropdown"><a style="width:100px;color:#68376b" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=99">Additions</a></li>
+            <li class="dropdown"><a style="width:100px;color:#68376b" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=98">Do Not Carry</a></li>
+            <li class="dropdown"><a style="width:100px;color:#68376b" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=7">Shelf Tags</a></li>
+            <li class="dropdown"><a style="width:100px;color:#68376b" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=9">Generic Signs</a></li>
+            <li class="dropdown"><a style="width:100px;color:#3e47bd" href="http://192.168.1.2/git/fannie/reports/ItemBatches/ItemBatchesReport.php">Batch Item Hist.</a></li>
+            <li class="dropdown"><a style="width:150px;color:#3e47bd" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeIndex.php">Batch Check Tools</a></li>
         </ul>
-              
+        
     </div>
+
+
 </form>
 </div>
 
