--- a/item/SalesChange/SalesChangeLinksNew.html
+++ b/item/SalesChange/SalesChangeLinksNew.html
@@ -3,9 +3,9 @@
     width: 125px;
 }
 li:hover {
-    //background-color: #e6f8fc;
-    border-radius: 5px;
-    border: 1px dotted #e6f8fc;
+    background-color: #fff9f5;
+    //border-radius: 5px;
+    //border: 1px dotted #e6f8fc;
 }
 </style>
 
