--- a/item/SalesChange/SalesChangeLinksNew.html
+++ b/item/SalesChange/SalesChangeLinksNew.html
@@ -3,9 +3,7 @@
     width: 125px;
 }
 li:hover {
-    background-color: #fff9f5;
-    //border-radius: 5px;
-    //border: 1px dotted #e6f8fc;
+    outline: 1px dashed lightblue;
 }
 </style>
 
