--- a/item/SalesChange/SalesChangeLinksNew.html
+++ b/item/SalesChange/SalesChangeLinksNew.html
@@ -5,30 +5,45 @@
 li:hover {
     outline: 1px dashed lightblue;
 }
+div.menu-wrap {
+    width: 150px;
+    height: 25px;
+    float: left;
+}
+div.menu-wrap:hover {
+    
+}
+.menu-a:hover {
+    background-color: #ffeab0;
+    background: linear-gradient(#f5f5f5,lightgrey);
+    border-radius: 3px;
+    text-decoration: none;
+    color: darkblue;
+}
+.menu-a-b {
+
+}
 </style>
 
 <br>
-<div class="container-fluid"  align="center" style="height:80px;width:1200px;">
+
 <form method="get"> 
-    <div class="navbar navbar-default hidden-print" style="background-color:white;border:none;padding:1px">
-        <ul class="nav navbar-nav">
-            <li class="dropdown"><a style="width:100px;color:#68376b" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=1">Good</a></li>            
-            <li class="dropdown"><a style="width:100px;color:#68376b" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=2">Notations</a></li>
-            <li class="dropdown"><a style="width:100px;color:#68376b" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=8">Missing</a></li>
-            <li class="dropdown"><a style="width:100px;color:#68376b" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=0">Unchecked</a></li>
-            <li class="dropdown"><a style="width:100px;color:#68376b" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=99">Additions</a></li>
-            <li class="dropdown"><a style="width:100px;color:#68376b" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=98">Do Not Carry</a></li>
-            <li class="dropdown"><a style="width:100px;color:#68376b" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=7">Shelf Tags</a></li>
-            <li class="dropdown"><a style="width:100px;color:#68376b" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=9">Generic Signs</a></li>
-            <li class="dropdown"><a style="width:100px;color:#3e47bd" href="http://192.168.1.2/git/fannie/reports/ItemBatches/ItemBatchesReport.php">Batch Item Hist.</a></li>
-            <li class="dropdown"><a style="width:150px;color:#3e47bd" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeIndex.php">Batch Check Tools</a></li>
-        </ul>
+    <div class="">
+
+            <div class="menu-wrap"><a class="" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=1">Good</a></div>            
+            <div class="menu-wrap"><a class="menu-a"  href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=2">Notations</a></div>
+            <div class="menu-wrap"><a class="menu-a"  href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=8">Missing</a></div>
+            <div class="menu-wrap"><a class="menu-a"  href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=0">Unchecked</a></div>
+            <div class="menu-wrap"><a class="menu-a"  href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=99">Additions</a></div>
+            <div class="menu-wrap"><a class="menu-a"  href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=98">Do Not Carry</a></div>
+            <div class="menu-wrap"><a class="menu-a"  href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=7">Shelf Tags</a></div>
+            <div class="menu-wrap"><a class="menu-a"  href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeQueues.php?queue=9">Generic Signs</a></div>
+            <div class="menu-wrap"><a class="menu-a-b" href="http://192.168.1.2/git/fannie/reports/ItemBatches/ItemBatchesReport.php">Batch Item Hist.</a></div>
+            <div class="menu-wrap"><a class="menu-a-b" href="http://192.168.1.2/scancoord/item/SalesChange/SalesChangeIndex.php">Batch Check Tools</a></div>
+
         
     </div>
-
-
 </form>
-</div>
 
 
 
